fix: 🐛 confirm pin button spacing

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -28,4 +28,9 @@ p {
 
 .portkey-ui-base-modal .portkey-ant-modal-body {
   height: unset !important;
+  min-height: 566px;
+}
+
+.set-pin-wrapper .set-pin-content .portkey-ant-form-vertical .submit-btn-form-item {
+  position: unset !important;
 }
